syntax = "proto3";

enum Compartment {
    COMPARTMENT_SUSCEPTIBLE = 0;
    COMPARTMENT_INFECTED = 1;
    COMPARTMENT_REMOVED = 2;
}

message EncounterRequest {
    uint32 sender_id = 1;
    Compartment requester_compartment = 2;
    string disease = 3;
}

message EncounterReply {
    uint32 sender_id = 1;
    bool encounter_decision = 2;
    Compartment replier_compartment = 3;
    string disease = 4;
}